InsightLearn/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insightlearn
  labels:
    name: insightlearn
    project: e-learning
