InsightLearn/k8s-manifests/https-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-https-proxy
  namespace: insightlearn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-https-proxy
  template:
    metadata:
      labels:
        app: nginx-https-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: tls-certs
          mountPath: /etc/ssl/certs/tls.crt
          subPath: tls.crt
        - name: tls-certs
          mountPath: /etc/ssl/private/tls.key
          subPath: tls.key
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-https-config
      - name: tls-certs
        secret:
          secretName: insightlearn-tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-proxy-service
  namespace: insightlearn
spec:
  type: NodePort
  selector:
    app: nginx-https-proxy
  ports:
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
      protocol: TCP
